CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

PROJECT( Heap )

AUX_SOURCE_DIRECTORY( . DIR_MAIN )

#SET( OpenCV_DIR F:/libtools/opencv-4.3.0/build  )

#FIND_PACKAGE( OpenCV REQUIRED ) 

INCLUDE_DIRECTORIES( . )

FILE(GLOB_RECURSE HEADERS *.h *.hpp)

SOURCE_GROUP("Include" FILES ${HEADERS} ) 

ADD_EXECUTABLE( Heap ${DIR_MAIN} ${HEADERS} )

#TARGET_LINK_LIBRARIES( Heap ${OpenCV_LIBS} )
